--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-data-injector",
   "description": "Grunt Task that uses the git diff information to modify the content of files",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "homepage": "https://github.com/paulpflug/grunt-git-diff/",
   "author": {
     "name": "Paul Pflugradt",
@@ -20,21 +20,22 @@
       "url": "https://github.com/paulpflug/grunt-data-injector/blob/master/LICENSE-MIT"
     }
   ],
-  "scripts" : {
+  "scripts": {
     "test": "mocha"
-    },
+  },
   "main": "gruntfile.coffee",
   "engines": {
     "node": "*"
   },
   "dependencies": {
+    "js-yaml": "^3.1.0",
     "lodash": "*"
-    },
+  },
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-concurrent": "^0.5.0",
     "grunt-mocha-test": "*",
-    "grunt-contrib-clean": "~0.5.0",    
+    "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-coffee": "~0.10.1",
     "grunt-contrib-watch": "~0.6.1",
@@ -42,7 +43,7 @@
     "time-grunt": "~0.3.1",
     "load-grunt-tasks": "~0.4.0",
     "coffee-script": "^1.7.1",
-    "chai":"*"
+    "chai": "*"
   },
   "keywords": [
     "gruntplugin",
